2024-11-04 Jan Kotanski <jankotan@gmail.com>
	* add support for append end extend actions in copy-map files (#726)
	* tagged as v4.17.0

2024-10-22 Jan Kotanski <jankotan@gmail.com>
	* improve datasetName values generation in the ScanNames mode (#723)
	* tagged as v4.16.2

2024-09-27 Jan Kotanski <jankotan@gmail.com>
	* fix for metadata parser of groups without NX_class (#718)
	* fix minimal_value and maximal_value to minimum_value and maximum_value NXlog attributes (#718)
	* tagged as v4.16.1

2024-09-26 Jan Kotanski <jankotan@gmail.com>
	* add enum as a valid secop type(#715)
	* tagged as v4.16.0

2024-09-11 Jan Kotanski <jankotan@gmail.com>
	* add support for link, key and function for secop meaning dictionary (#712)
	* tagged as v4.15.0

2024-08-08 Jan Kotanski <jankotan@gmail.com>
	* add support for secop meaning dictionary (#709)
	* tagged as v4.14.0

2024-08-08 Jan Kotanski <jankotan@gmail.com>
	* fix typo in for device_name in nxsetup (#706)
	* tagged as v4.13.1

2024-07-19 Jan Kotanski <jankotan@gmail.com>
	* improve findAttribute by adding moduleAttributeMap (#696)
	* add ScanNamesNoMetadata and ScanNamesNoGrouping variables (#702)
	* tagged as v4.13.0

2024-07-15 Jan Kotanski <jankotan@gmail.com>
	* create output dir is does not exists (#696)
	* fix ScanFileinScanNameDir name to ScanNames (#694)
	* fix support for ScanNames=False (#695)
	* tagged as v4.12.0

2024-07-11 Jan Kotanski <jankotan@gmail.com>
	* add --online-xml-file option for nxscreate stdcomp (#687)
	* add support for ScanFileinScanNameDir mode for detector template (#689)
	* fix for eigerdectris VDS (#691)
	* tagged as v4.11.0

2024-07-10 Jan Kotanski <jankotan@gmail.com>
	* add support ScanFileInScanNameDir env variable
	* tagged as v4.10.0

2024-07-10 Jan Kotanski <jankotan@gmail.com>
	* improve support for eiger RoiMode attribute
	* tagged as v4.9.1

2024-07-09 Jan Kotanski <jankotan@gmail.com>
	* add support for eiger RoiMode attribute
	* tagged as v4.9.0
